# deepmind-workspace

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  railway.toml  render.yaml
backend/gateway/: main.py  requirements.txt
backend/services/01_chat/: main.py  requirements.txt
backend/services/04_memory/: main.py  requirements.txt
backend/services/07_api/: main.py  requirements.txt
backend/services/15_auth/: main.py  requirements.txt
config/: app.yaml  app_settings.yaml  connectors.yaml
docs/: ADDING_CONNECTORS.md  ARCHITECTURE.md  CLOUD_DEPLOYMENT.md  SECRETS.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Button.tsx  Card.tsx  Input.tsx  Layout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Chat.tsx  Dashboard.tsx  Login.tsx  Memory.tsx  NotFound.tsx  Register.tsx  Settings.tsx
frontend/src/store/: authStore.ts  chatStore.ts
migrations/versions/: 001_create_users_table.py
scripts/: generate_secrets.py  render_build.sh
src/deepmind/: __init__.py  app.py  cli.py  config.py
src/deepmind/api/: auth_routes.py  routes.py
src/deepmind/connectors/: __init__.py  base.py  dropbox_connector.py  gdrive_connector.py  github_connector.py  registry.py
src/deepmind/middleware/: auth_middleware.py  rate_limiter.py
src/deepmind/models/: __init__.py  conversation.py  rate_limit_rule.py  user.py
src/deepmind/services/: auth_service.py  code_executor.py  context_manager.py  conversation_service.py  database.py  deepseek_client.py  document_processor.py  flux_client.py  network_blocker.py  (+3 more)
tests/: test_network_isolation.py  test_rate_limiting.py  test_secrets.py
(+5 files in other folders)
